Add Magento Marketplace authentication and update installation process
- Update README.md to reflect changes in Magento installation source and credentials.
- Add public and private key variables for Magento Marketplace in Terraform configurations.
- Enhance Ansible tasks to configure Composer authentication for Magento Marketplace.
- Modify user_data.sh.tpl to include new keys and improve directory handling.
- Update example Terraform variables file to include new keys.

--- a/greenleaf-infra/ansible/group_vars/all.yml.example
+++ b/greenleaf-infra/ansible/group_vars/all.yml.example
@@ -13,3 +13,10 @@ db_host: "db-endpoint"
 db_name: "magento"
 db_username: "magento"
 db_password: "ChangeMe123!"
+
+magento_public_key: "your-public-key"
+magento_private_key: "your-private-key"
+
+magento_search_engine: opensearch
+magento_opensearch_host: "127.0.0.1"
+magento_opensearch_port: "9200"
