--- a/greenleaf-infra/ansible/roles/magento/tasks/main.yml
+++ b/greenleaf-infra/ansible/roles/magento/tasks/main.yml
@@ -1,17 +1,23 @@
-- name: Ensure Magento root exists
+- name: Ensure parent directory for Magento exists
   file:
-    path: "{{ magento_root }}"
+    path: "{{ magento_root | dirname }}"
     state: directory
     owner: www-data
     group: www-data
     mode: "0755"
-    recurse: yes
 
 - name: Install Composer
   get_url:
     url: https://getcomposer.org/download/latest-stable/composer.phar
     dest: /usr/local/bin/composer
     mode: "0755"
+
+- name: Disable Composer audit security block (optional but required for Magento 2.4.6)
+  command: composer config --global audit.block-insecure false
+  environment:
+    COMPOSER_ALLOW_SUPERUSER: "1"
+  args:
+    creates: /root/.composer/config.json
 
 - name: Ensure Composer home directory
   file:
@@ -57,13 +63,6 @@
   delay: 20
   until: magento_create.rc == 0
 
-- name: Ensure Magento CLI exists (fallback symlink)
-  file:
-    src: "{{ magento_root }}/vendor/magento/magento2-base/bin/magento"
-    dest: "{{ magento_root }}/bin/magento"
-    state: link
-  when: magento_root is defined
-
 - name: Verify Magento CLI exists
   stat:
     path: "{{ magento_root }}/bin/magento"
@@ -97,6 +96,7 @@
     --opensearch-port={{ magento_opensearch_port }}
   args:
     creates: "{{ magento_root }}/app/etc/env.php"
+  no_log: true
 
 - name: Set filesystem permissions
   file:
