--- a/greenleaf-infra/terraform/terraform.tfvars.example
+++ b/greenleaf-infra/terraform/terraform.tfvars.example
@@ -13,3 +13,6 @@ magento_base_url       = ""
 # ansible_repo_url    = "https://github.com/your-account/greenleaf-infra.git"
 # ansible_repo_branch = "main"
 # rds_multi_az        = true
+# opensearch_instance_type = "t3.small.search"
+# opensearch_engine_version = "OpenSearch_2.11"
+# opensearch_volume_size = 10
